grammatical fix in transcription

--- a/src/content/docs/letter/049.mdx
+++ b/src/content/docs/letter/049.mdx
@@ -22,11 +22,11 @@ We’re sitting in a surprise rainstorm of two days duration, more or less cut o
 
 We received the officially approved service to Fr. Herman last week and have translated it and will include it in this issue, the only issue that will reach our readers before the canonization. It will be 24 pages in the middle of the magazine, and we’ll also print 1000 or so separate in brochure-form. We tried to keep some poetic feeling in the English, not with entire success, I’m afraid. The Slavonic itself is sometimes inspiring, and sometimes rather pale. The troparion is still in doubt; we stand for the old one, but there may be a completely new one…or perhaps a choice of two. This being really the first “American” service, we’ve tried to make it a model, right down to the acrostic, which worked out rather successfully in both languages. The Slavonic committee does not care much for acrostics, but we found it rather inspiring to have to work within the norms of a sacred phrase from the words of Father Herman. Jordanville is printing Fr. Kyprian’s icon of Fr. Herman in 2 sizes—4 x 5 and 6×9. Were having our icon reprinted in smaller size—something like 2 1/2×3 1/2.
 
-Yes, we have the text of Fr. Michael’s answer to Fr. Schmemann—it’s just what is needed today. Unfortunately, because of the service, it will have to go in next issue. It’s 15 pages long. The Synod is now getting quite a nucleus of American priests. May God grant all to flourish under her. It will doubtless take a while before the Russian psychology comes around to accepting the. Synod’s crucial role in world Orthodoxy, but fortunately there are some who understand already.
+Yes, we have the text of Fr. Michael’s answer to Fr. Schmemann—it’s just what is needed today. Unfortunately, because of the service, it will have to go in next issue. It’s 15 pages long. The Synod is now getting quite a nucleus of American priests. May God grant all to flourish under her. It will doubtless take a while before the Russian psychology comes around to accepting the Synod’s crucial role in world Orthodoxy, but fortunately there are some who understand already.
 
 Is the Synod priest you mention in Alaska by any chance Fr. Nicholas Harris in Anchorage? He ordered a number of copies of our Fr. Gerasim issue and subscribed at that time. We hear from Fr. Elias Armistead that he is bringing his wife to Alaska to open an Inn—but still he doesn’t say a word about what he’s doing, though he notes that our richest diocese, San Francisco, doesn’t give him a dime. But for what? Our doubts about him only grow.
 
-We read with interest your comments on the times. Alas, I fear that the free, liberal, naive America of our childhood is gone, and the increasing anarchism will only call forth a dictatorship, of right or left, depending on who can seize it. Whichever it may be, we Orthodox don’t have a bright future, in worldly terms; but doubles this will give us our chance really to confess our Orthodoxy in difficult circumstances. The “official” jurisdictions might be able to make their peace with the new conditions and “flourish” ; la the Soviet Church or the Church of Greece, in which case we who are less politically-minded would be reduced to a more or less catacomb status even under a rightist dictatorship, while under leftists we might not even be allowed to exist. Although we don’t get much news here (mainly week-old comment in US News) and aren’t really aware of the “polarization” of feelings that is going on, my guess is that rightism will install itself, leading to one last world conflagration, out of which may emerge… the beast of the last days who will finally reconcile all.
+We read with interest your comments on the times. Alas, I fear that the free, liberal, naive America of our childhood is gone, and the increasing anarchism will only call forth a dictatorship, of right or left, depending on who can seize it. Whichever it may be, we Orthodox don’t have a bright future, in worldly terms; but doubles this will give us our chance really to confess our Orthodoxy in difficult circumstances. The “official” jurisdictions might be able to make their peace with the new conditions and “flourish” ; à la the Soviet Church[^1] or the Church of Greece, in which case we who are less politically-minded would be reduced to a more or less catacomb status even under a rightist dictatorship, while under leftists we might not even be allowed to exist. Although we don’t get much news here (mainly week-old comment in US News) and aren’t really aware of the “polarization” of feelings that is going on, my guess is that rightism will install itself, leading to one last world conflagration, out of which may emerge… the beast of the last days who will finally reconcile all.
 
 But that is all guesswork. For us what is important is to stick to our holy Orthodoxy, which is our real battle, and face each new day in a spirit of confession.
 
@@ -41,3 +41,7 @@ Thank you for letting us see the letters to John Harwood, which we return herewi
 Please pray for us in these crucial days.
 
 With love in Christ our Saviour,
+
+---
+
+[^1]: Here we have corrected a grammatical error in transcription from the corpus of 328: *à la* instead of the transcribed *la the Soviet Church*. This is not without precedent, as Blessed Seraphim uses this expression in letters [102.1](/letter/102-1) and [112](/letter/112).
