--- a/src/content/docs/letter/057.mdx
+++ b/src/content/docs/letter/057.mdx
@@ -18,7 +18,7 @@ Dear Brother in Christ, Daniel,
 
 Here it is already a week since the great Church events of this year, and only now am I sitting down to try to tell you a little about them. I know how anxious you are to hear about them, but this will be only a brief sketch—we hope to have a fuller account with illustrations in our July-August Orthodox Word.
 
-For us the great celebration began a month early, with the yearly Liturgy in Vladika Johns Sepulchre on the anniversary of his repose (June 19/July 2). Father Herman was commemorated then, too. Then, on the feast of Sts. Sergius and Herman of Valaam (June 29/July 11), Vladika Nektary came to us just after dawn and served Divine Liturgy. This, probably Father Herman’s namesday, was the beginning of daily litiyas for the repose of the about to be glorified Saint.
+For us the great celebration began a month early, with the yearly Liturgy in Vladika John's Sepulchre on the anniversary of his repose (June 19/July 2). Father Herman was commemorated then, too. Then, on the feast of Sts. Sergius and Herman of Valaam (June 29/July 11), Vladika Nektary came to us just after dawn and served Divine Liturgy. This, probably Father Herman’s namesday, was the beginning of daily litiyas for the repose of the about to be glorified Saint.
 
 On the feastday of St. Seraphim (July 19/Aug. 1) Vladika Anthony made a surprise visit to us not long after dawn (together with Deacon Nicholas, who brought a beautiful small cupola he had made for our printshop), and served the third Liturgy in our outdoor chapel, followed by a panikhida for Fr. Herman and the first reading of the Ukase of Metr. Philaret which will be in our new OW.
 
@@ -34,7 +34,7 @@ After the polyeleos, the Metropolitan unveiled the icon with the relics of St. H
 
 The veneration of the icon and relics by the multitude of faithful took up the rest of the service, while Gleb and I read the canons—one troparion of each canticle to St. Herman in English. The lauds were sung in Slavonic and English, “O Most glorious wonder” being sung most rousingly by the seminarians in both languages. Everyone was inspired with a genuine paschal feeling, and Fr. Nicholas Dombrovsky emphasized this the next morning in his sermon at the early Liturgy by calling the celebration a second “Pascha in the summertime,” occurring just 67 years and 8 days after the first such “Pascha,” St. Seraphim’s canonization, of which the Saint had prophesied in those words. After the evening service the American converts (of whom there were between 50 and 100 present) lined up to receive confession from Fr. Panteleimon, which lasted until 2 a.m.
 
-On Sunday the whole day was one long church service, beginning with the early Liturgy at 7 and the blessing of the water at 8:30 (into which some water from Father Hermans spring was poured). The final prayer was read at 4 in the afternoon, and Fr. Panteleimon, who spent the time between 4 and the evening service in Archbishop Johns Sepulchre, could truthfully tell a group of Greeks to whom he spoke at 9 p.m.—“I came to church at 8 this morning and just got out now— glory be to God!”
+On Sunday the whole day was one long church service, beginning with the early Liturgy at 7 and the blessing of the water at 8:30 (into which some water from Father Hermans spring was poured). The final prayer was read at 4 in the afternoon, and Fr. Panteleimon, who spent the time between 4 and the evening service in Archbishop John's Sepulchre, could truthfully tell a group of Greeks to whom he spoke at 9 p.m.—“I came to church at 8 this morning and just got out now— glory be to God!”
 
 The Liturgy proceeded slowly and solemnly. At the Entrance with the Gospel, the icon with relics was carried around the altar table—but not by the two oldest priests, who lifted it up at first, but by Archimandrites Panteleimon and Kyprian, as representing the monastic clergy at this monastic celebration. Vladika Anthony insisted on this understanding of the celebration and enforced it throughout. Before the Communion—in which it seemed the whole church participated—the seminarians sang stikhera in Slavonic and English.
 
@@ -44,7 +44,7 @@ At the conclusion of the services the rite of the “Panagia” was celebrated: 
 
 In the evening, following the Vigil to the Smolensk Mother of God, a panikhida was served for Metr. Anthony Khrapovitsky. Again, how appropriate that this feast of the whole of Russia Abroad should occur on the eve of the repose of the founder of the Russian Church Abroad. Afterwards we went with Fr. Panteleimon to hear him talk to a small Pan-Orthodox meeting, composed mostly of Greeks who are extremely upset about the direction the Greek Church is taking, but are wary of following the “Russians.” Fr. Panteleimon answered their questions and gave an excellent talk on the difference between the abstract approach to Orthodoxy—academic discussions of what Orthodoxy is, definitions of “spirituality,” etc.—and the concrete approach, built up of all those things which are widely considered today as [un] important or old-fashioned—beards, cassocks, absence of pews and organs, daily morning and evening prayers, fasting.
 
-On Monday morning after Divine Liturgy there was another moleben to St. Herman, and then a general panikhida in Vladika Johns Sepulchre, first by Fr. Vladimir in Slavonic, then by Fr. Panteleimon in Greek; and at the conclusion of this, as if summing up the whole paschal feeling of these days, Fr. Panteleimon greeted all in Russian with: Christos voskrese! to which all enthusiastically responded: Voistinu voskrese!
+On Monday morning after Divine Liturgy there was another moleben to St. Herman, and then a general panikhida in Vladika John's Sepulchre, first by Fr. Vladimir in Slavonic, then by Fr. Panteleimon in Greek; and at the conclusion of this, as if summing up the whole paschal feeling of these days, Fr. Panteleimon greeted all in Russian with: Christos voskrese! to which all enthusiastically responded: Voistinu voskrese!
 
 We arrived back home only after midnight on Monday, after seeing Fr. Panteleimon off with Fr. Neketas Palassis and Fr. Ephrem for Seattle, and the next day our great feast continued into a third day when Frs. Kyprian and Vladimir with Deacon Nicholas and four seminarians arrived to spend the day. Fr. Vladimir carried the icon with relics of St. Herman completely around our land, giving us yet another blessing of our Patron Saint. Later in the day Fr. Alexy Poluektov arrived to begin putting us back in a working spirit by starting to put our linotype into operation; he stayed 3 days. On Wednesday Fr. Elias Armistead stopped by on his way back to Alaska and spent the night.
 
