--- a/src/content/docs/letter/077.mdx
+++ b/src/content/docs/letter/077.mdx
@@ -32,7 +32,7 @@ You seem to believe that we cannot continue the path we have begun as monks. But
 
 We are weak and sinful, and what we have undertaken is far, far beyond our strength and our spiritual talents. Nonetheless, God multiplies His favors to us, and we go forward with difficulties and sorrows, yet certain that He is with us, and Vladika John also. The form which our future existence will take is still uncertain. We always thought that to be a “monastery” was beyond us, but in principle the Synod has blessed this and the only problem now is one of organization and independence—and this has happened without our own will being involved at all, in fact it has been forced upon us. If our work so far has pleased God, then surely He will not leave us now or abandon us to the path of pseudo-Orthodoxy!
 
-Glory be to God for everything! Do not believe for a moment that we are abandoning the path we began with Vladika Johns blessing. We go forward with absolute trust in God, on the straight monastic path which Vladika John foretold to us when he called our Brotherhood a “reflection of Valaam” and when he told me, when I told him of our hopes for a missionary monastery away from the city: “I too believe that there will be such a missionary monastery in California.”
+Glory be to God for everything! Do not believe for a moment that we are abandoning the path we began with Vladika John's blessing. We go forward with absolute trust in God, on the straight monastic path which Vladika John foretold to us when he called our Brotherhood a “reflection of Valaam” and when he told me, when I told him of our hopes for a missionary monastery away from the city: “I too believe that there will be such a missionary monastery in California.”
 
 Only pray for us, dear Elena Yurevna, and do not lose hope in us; and do not cease to tell us what is right!
 
