--- a/src/content/docs/letter/084.mdx
+++ b/src/content/docs/letter/084.mdx
@@ -28,7 +28,7 @@ Please forgive us for speaking in a way that might perhaps seem disrespectful to
 
 From San Francisco there are only two new developments: Laurence Campbell on a recent visit told us that there is talk among laymen who are close to Vladika about our “disobedient” attitude toward him. There is no way they could have formed such an opinion except from whatever Vladika himself has told them. Which only reinforces our idea that Vladika is not acting very seriously with regard to the “monastery” he has formed, talking about our “faults” to others. His approach is worldly, and his behavior is apparently governed by the fact that he has been personally offended by our behavior. You will remember that he declared himself to be personally offended when we declined to be made priests immediately; and to this was added our improprietous behavior at Christmas. This seems to us an unsound basis of behavior, and it can only be a potential threat to our common work, which certainly transcends the personal offenses of a day.
 
-The second new development: when Vladika Nektary visited us recently he called Vlad. Anthony shortly before and requested permission to serve and give us Holy Communion. Vladika told him to relay to us this message: since our Starets was unable to come for Pascha (he is serving in Palo Alto now), and since our behavior at Christmas shows that we are in danger of falling into prelest (?!), he asks us to reconsider our decision about accepting priesthood. Does this make sense? Does one ask a person in danger of falling into prelest to accept priesthood?! Clearly, neither the suspicion of prelest nor the offer of priesthood can be taken seriously in the context of any serious church activity. They are not the statements of someone who knows our work and wants to do what is best for that work; they come, rather, from someone on the outside who is thinking about what will look best, and also what he can best control; for clearly a priest is more closely bound to his bishop than is a simple monk. And so we are only confirmed in our diagnosis of our case and in our desire to be independent of Vladika Anthony. If any further good will come from our Brotherhood, it will be from our independendy pursuing the path already begun, with Vladika Johns blessing, not by meekly accepting directions from without. We recently found, by the way, Vladika Vitalys (Maximenko’s) address on his consecration as bishop, in which he movingly speaks of the spiritual-psychological conditions under which he was able to bring such fruit as a missionary of the printed word: in absolute independence, “not bothering anyone and not bothered by anyone.” Exactly! And that’s normal in the Church, not bending oneself into some other shape for the sake of a purely formal and fictitious “obedience,” That’s the way Vladika John acted, and that’s the inspiration he gave us. If we fall into heresy or give scandal, that’s another matter. For us here in the wilds, our idea of a bishop is somewhat modelled on the vultures who circle our mountain constantly now: “overseeing” everything, they nonetheless do not bother those animals that move around doing their own affairs, but come down to examine and clean up only when they smell something rotten! If Vladika A, after all his “disillusionment” with us, still wants to ordain us priests, then clearly he doesn’t smell anything seriously rotten!
+The second new development: when Vladika Nektary visited us recently he called Vlad. Anthony shortly before and requested permission to serve and give us Holy Communion. Vladika told him to relay to us this message: since our Starets was unable to come for Pascha (he is serving in Palo Alto now), and since our behavior at Christmas shows that we are in danger of falling into prelest (?!), he asks us to reconsider our decision about accepting priesthood. Does this make sense? Does one ask a person in danger of falling into prelest to accept priesthood?! Clearly, neither the suspicion of prelest nor the offer of priesthood can be taken seriously in the context of any serious church activity. They are not the statements of someone who knows our work and wants to do what is best for that work; they come, rather, from someone on the outside who is thinking about what will look best, and also what he can best control; for clearly a priest is more closely bound to his bishop than is a simple monk. And so we are only confirmed in our diagnosis of our case and in our desire to be independent of Vladika Anthony. If any further good will come from our Brotherhood, it will be from our independendy pursuing the path already begun, with Vladika John's blessing, not by meekly accepting directions from without. We recently found, by the way, Vladika Vitalys (Maximenko’s) address on his consecration as bishop, in which he movingly speaks of the spiritual-psychological conditions under which he was able to bring such fruit as a missionary of the printed word: in absolute independence, “not bothering anyone and not bothered by anyone.” Exactly! And that’s normal in the Church, not bending oneself into some other shape for the sake of a purely formal and fictitious “obedience,” That’s the way Vladika John acted, and that’s the inspiration he gave us. If we fall into heresy or give scandal, that’s another matter. For us here in the wilds, our idea of a bishop is somewhat modelled on the vultures who circle our mountain constantly now: “overseeing” everything, they nonetheless do not bother those animals that move around doing their own affairs, but come down to examine and clean up only when they smell something rotten! If Vladika A, after all his “disillusionment” with us, still wants to ordain us priests, then clearly he doesn’t smell anything seriously rotten!
 
 We had a good long talk with Vladika Nektary about all this, and, while he said he would not “advise” us, if it were he that was involved he would simply disobey those directives which he felt to be destructive of the idea by which we live, and thus if there were going to be a complaint at the Synod it would have to come first from Vladika A. himself. This of course reinforces what Vladika Laurus told us about not taking any formal action but nonetheless expressing our disagreement with such actions. And so we are patiently awaiting what will come, content that at least for the time being we are not actually being bothered by any pressing demands and can concentrate on the work at hand, with which we are only slowly catching up.
 
