--- a/src/content/docs/letter/085.mdx
+++ b/src/content/docs/letter/085.mdx
@@ -20,7 +20,7 @@ Evlogeite! This is solely a “Publication Question Sheet”; a letter will foll
 
 [1.] Life of St. Mamas: safely received with many thanks. It will go in the May-June issue, as Vladika John will have to be our saint for March-April! By the way, it does no good to send us anything by “special delivery,” which is unheard of here; all our mail just sits in the post office until we go and get it.
 
-[2.] Life of Blessed Archbishop John in Russian is enclosed—this is our closely guarded “secret project” about which no one knew. Glory be to God, we finished it the evening before Vladika Johns repose and delivered it at 6. a.m. to the Sepulchre before Liturgy. First response from everyone was favorable, after the shock wore off, but we await further repercussions. We visited for two hours with Vladika Nektary, who was just sent home; his condition is still serious, but hopeful; he is on a strict regime with absolute rest prescribed, even idle gestures being prohibited.
+[2.] Life of Blessed Archbishop John in Russian is enclosed—this is our closely guarded “secret project” about which no one knew. Glory be to God, we finished it the evening before Vladika John's repose and delivered it at 6. a.m. to the Sepulchre before Liturgy. First response from everyone was favorable, after the shock wore off, but we await further repercussions. We visited for two hours with Vladika Nektary, who was just sent home; his condition is still serious, but hopeful; he is on a strict regime with absolute rest prescribed, even idle gestures being prohibited.
 
 [3.] Calendar: have you checked through the whole thing? How widespread are the discrepancies in dates of commemoration of saints, and how can we make the calendar usable for Greeks as well as Russians? We would like to start printing, God willing, in Sept.
 
