--- a/src/content/docs/letter/105.mdx
+++ b/src/content/docs/letter/105.mdx
@@ -20,7 +20,7 @@ Please forgive us, but here are some more observations on a sad trend!
 
 We visited San Francisco on Friday (June 10/23) to attend Liturgy in Vladika John’s Sepulchre; because June 19/July 2 falls on Sunday this year, Vladika Anthony decided to have the one Liturgy that he allows each year on Vladika John’s namesday instead. This is a little strange, as once before when July 2 fell on Sunday there was a Liturgy—without a panikhida following, since it was Sunday, but nonetheless there was a Liturgy to mark the anniversary. Rumor has it, and it’s quite plausible, that Vlad. Anthony was acting on advice of the cathedral clergy, who have been opposed to veneration of Vladika John from the first, and used the excuse of its being Sunday to obliterate the “competition” this year.
 
-Being ourselves somewhat upset in general over the sad direction in which Russian Orthodoxy Abroad seems to be going, this seemingly small transference of the day of Vladika Johns veneration led us into further reflections. It is now 6 years since Vladika Johns repose. The spark of Orthodoxy in the Russian diaspora has continued to decline in those years—and yet here is a God-given fuel to ignite and spread the spark! We thought: why such efforts to limit veneration of an obvious wonderworker and saint for our times? Why not more than one Liturgy a year in his Sepulchre (as there was before Vladika Anthony came, when Vlad. Nektary was temporary ruling bishop)? Why are not regular pilgrimages arranged?
+Being ourselves somewhat upset in general over the sad direction in which Russian Orthodoxy Abroad seems to be going, this seemingly small transference of the day of Vladika John's veneration led us into further reflections. It is now 6 years since Vladika John's repose. The spark of Orthodoxy in the Russian diaspora has continued to decline in those years—and yet here is a God-given fuel to ignite and spread the spark! We thought: why such efforts to limit veneration of an obvious wonderworker and saint for our times? Why not more than one Liturgy a year in his Sepulchre (as there was before Vladika Anthony came, when Vlad. Nektary was temporary ruling bishop)? Why are not regular pilgrimages arranged?
 
 Well, of course there are some definite reasons why not, and these were confirmed for us by our visit to Vlad. Anthony after the Liturgy. He spent most of the time pointing out 3 or 4 places in our Russian Life of Vladika John which people had complained about. Well, it’s true that these points could have been expressed or presented better; but in back of these somewhat technical points, we sensed that—just as you mentioned when speaking to Vlad. Vitaly—that we weren’t speaking the same language, that Vlad. Anthony was somehow just pushing aside the main point about Vlad. John. He kept saying: the whole thing is too fresh, too controversial; we always wait at least 50 years before talking about sanctity (by which time, of course, our Russians will have forgotten) etc. At this Fr. Herman finally had to say: But Vladika John is a saint, a wonderworker! Vladika Anthony’s reply: Well, you and I can talk like this among ourselves, but not in public! We left feeling that our ruling hierarch had given us the advice (although he hadn’t expressed it in so many words): Your devotion and love are commendable, but don’t be so enthusiastic, not so much zeal, don’t make Vlad. John such a hero, let his small group of venerators keep it pretty much to themselves.
 
