--- a/src/content/docs/letter/218.mdx
+++ b/src/content/docs/letter/218.mdx
@@ -62,7 +62,7 @@ I fear that our new Orthodox Word, with its attempt (in the introduction to Metr
 
 This letter is already too long, and we haven’t yet “answered your question” about the Serbian hieromonk who serves in our church. On the question of the Serbian Church there has not been unanimity among our bishops. Archbp. Averky thought we should class them with the other Communist-dominated Patriarchates and have no communion with them; but most of our bishops haven’t thought so, and in fact Bishop Savva was so firm on this point that he said he would go into retirement if we broke communion with the Serbian Patriarchate. Our bishops apparently have made no decision on the subject, which means Serbia is classed more or less with the “canonical” Churches of the free world (probably a little better than they, because it is Old Calendar), with whom our relations were strained or discouraged but not entirely broken. In the absence of contrary advice from one of our bishops, we would advise you to accept whatever the local bishop allows, even including the reception of Holy Communion; however, if you feel uneasy about receiving Holy Communion from this priest, for personal spiritual reasons you could easily receive communion in some other of our churches there without being guilty of judging the bishop. It is of course not for you to “teach” the people there, which would only result in confusing them and probably yourself. We expect Vladika Nektary to visit us in the next week or so and will ask his opinion. This, of course, is not a “zealot” position—but none of our bishops has handed down to us a position of pure “zealotry,” including Archbishop Averky, who always emphasized the spiritual aspect without insisting on the letter of the law, and whose chief worry about our Church was not our lack of “strictness” but rather the evaporation of spiritual life and allowing worldly and political considerations to dominate us.
 
-Well, I have no time left to give you the information on the holy places of Switzerland and France—see how much “church politics” takes away from the spiritual side?! Forgive me. But I will write shortly with this information. Pray for us—and especially that we will finish on time our publications for the 10th anniversary of Vladika Johns repose. Let us ask him to help and guide us now!
+Well, I have no time left to give you the information on the holy places of Switzerland and France—see how much “church politics” takes away from the spiritual side?! Forgive me. But I will write shortly with this information. Pray for us—and especially that we will finish on time our publications for the 10th anniversary of Vladika John's repose. Let us ask him to help and guide us now!
 
 With love in Christ,
 
