--- a/src/content/docs/letter/219.mdx
+++ b/src/content/docs/letter/219.mdx
@@ -16,7 +16,7 @@ Dear Christopher,
 
 We send you heartfelt greetings on the Feast. May God preserve you in His grace.
 
-Sorry to be silent so long—as usual we have been busy, and still have too much to do before July 2, Vlad. Johns feast. Please pray for us especially in these weeks and on that day.
+Sorry to be silent so long—as usual we have been busy, and still have too much to do before July 2, Vlad. John's feast. Please pray for us especially in these weeks and on that day.
 
 Church problems don’t get any better. But there is hope if one struggles at least a little daily and tries to keep the heart clean. The test in the days ahead will be how much one has the “feel” for Orthodoxy and loves it.
 
