--- a/src/content/docs/letter/221.mdx
+++ b/src/content/docs/letter/221.mdx
@@ -30,7 +30,7 @@ Now, about an immediate concern: we have written to the new Abbot, Vladika Lauru
 
 Assuming that your offer still holds, and that Vladika Laurus will bless—do you have money for plane fare to get here, one-way? If not, we will manage it. We would want you to come straight here, without taking off your podrasnik—coming from one obedience to another.
 
-We ask your prayers for us especially in the days ahead and on June 19/July 2, the tenth anniversary of Vladika Johns repose. With all the troubles and rumors in the Church, we wish to ask his help very fervently for our further labors. This is the post-Paschal “apostolic” time of the Church year, and there is much apostolic labor still to do in Christ’s Church!
+We ask your prayers for us especially in the days ahead and on June 19/July 2, the tenth anniversary of Vladika John's repose. With all the troubles and rumors in the Church, we wish to ask his help very fervently for our further labors. This is the post-Paschal “apostolic” time of the Church year, and there is much apostolic labor still to do in Christ’s Church!
 
 With love in Christ our Saviour,
 
