--- a/src/content/docs/letter/222.mdx
+++ b/src/content/docs/letter/222.mdx
@@ -24,7 +24,7 @@ Ever darker clouds seem ahead of us in church life, and we pray God will give yo
 
 Just a word: if ever there seems “just no way out” for you and you desperately need “asylum”—come here and we will “hide” you, as long as God gives us strength and grace to inhabit these mountains.
 
-Please pray for us, especially on the day of Archbishop Johns repose, June 19/July 2. We would be glad to hear a word from you.
+Please pray for us, especially on the day of Archbishop John's repose, June 19/July 2. We would be glad to hear a word from you.
 
 With love in Christ our Saviour
 
