--- a/src/content/docs/letter/239.mdx
+++ b/src/content/docs/letter/239.mdx
@@ -18,7 +18,7 @@ Dear Christopher,
 
 Greetings in our Lord Jesus Christ.
 
-Please forgive our long silence. We have had a quiet summer as far as people is concerned (no one has come for more than a few weeks, and we’ve been mostly alone for the past month), but several outward events have caused us trouble. First there was our forest fire (have I written since then?), which came within two miles and forced us to pack up all our rare manuscripts and books in preparation for evacuation (by Vladika John’s prayers the fire was turned back by a strong wind at the last minute); then two weeks of the most unseasonable rain, beginning precisely on the feast of St. Elias, with thunder and lightning, and which laid both Fr. Herman and myself low with colds or flu. The tenth anniversary of Vladika Johns repose (described in the latest OW) gave us a new bit of inspiration; and last week Vladikas Anthony and Nektary visited us and served Liturgy, together with the new Deacon Andrew of the S.F. Cathedral. All the time the “Greeks” are rumbling in the background, and already there are strong hints that we (and our bishops) aren’t Orthodox enough for them. More than ever we need to keep in view the ABCs of Orthodox survival, which more and more seems to us less a matter of doctrinal purity than of a basically sober and other-worldly attitude and orientation.
+Please forgive our long silence. We have had a quiet summer as far as people is concerned (no one has come for more than a few weeks, and we’ve been mostly alone for the past month), but several outward events have caused us trouble. First there was our forest fire (have I written since then?), which came within two miles and forced us to pack up all our rare manuscripts and books in preparation for evacuation (by Vladika John’s prayers the fire was turned back by a strong wind at the last minute); then two weeks of the most unseasonable rain, beginning precisely on the feast of St. Elias, with thunder and lightning, and which laid both Fr. Herman and myself low with colds or flu. The tenth anniversary of Vladika John's repose (described in the latest OW) gave us a new bit of inspiration; and last week Vladikas Anthony and Nektary visited us and served Liturgy, together with the new Deacon Andrew of the S.F. Cathedral. All the time the “Greeks” are rumbling in the background, and already there are strong hints that we (and our bishops) aren’t Orthodox enough for them. More than ever we need to keep in view the ABCs of Orthodox survival, which more and more seems to us less a matter of doctrinal purity than of a basically sober and other-worldly attitude and orientation.
 
 Your futile excursions into “worldliness” are not at all unusual or untypical in our days. Orthodox, by remaining unchanged, has become so out of harmony with the world, and the world itself has become so “glamorous” and “magical” (a symptom of chiliasm!)—that those who wish to be true Orthodox Christians today must suffer in their own souls the power of this disharmony between true and false life before emerging into a relatively stable Orthodox way of life. Be patient—your suffering-through of this painful state, without losing the deep-down desire to be Orthodox in spite of everything, will do you much good. By the way, your experience is not really so different from that of Blessed Augustine especially in the last months of his conversion when he saw clearly the truth of Christianity but just couldn’t commit himself to it. You should read his Confessions—a good book for our days. (There’s a readable translation in the Penguin Classics.)
 
