--- a/src/content/docs/letter/282.mdx
+++ b/src/content/docs/letter/282.mdx
@@ -24,9 +24,9 @@ To our knowledge, he is a typical “American convert”—very fervent, but wit
 
 Then Fr. John began to dream about monasticism. He visited Archbishop Andrew of Novo- Diveyevo, who wanted him to become a monk and open an old-folks’ home (he had been a celibate priest until then). He wrote us then about this, and we encouraged him, knowing that Vladika Andrew was very realistic about spiritual life, and that Fr. John seemed to understand the need for sufferings in spiritual life. But this monastic desire took a very strange form: Fr. John and his deacon were tonsured (by Fr. Panteleimon in Boston, who I believe was against the idea, but followed Vladika Andrews desire), and then told his parishioners that the church was now a monastery and that they should not come and bother the “monastic calm.” Finally he had the parish sign over the church property to the monastery, he sold it and moved away. He tried to make his second parish in Pennsylvania also sign their property over to him, but they refused. He changed the location of his monastery several times, and then about a year or more ago moved to Florida.
 
-On my recent visit to the Eastern U.S. I visited my godfather and met people from both of Fr. Johns former parishes. I found that he left a very bad impression behind him. His first parish was completely destroyed and the people scattered; the second parish remains but has bad feelings about him. The impression was strong that Fr. John has acted in a very unbalanced and irresponsible way.
+On my recent visit to the Eastern U.S. I visited my godfather and met people from both of Fr. John's former parishes. I found that he left a very bad impression behind him. His first parish was completely destroyed and the people scattered; the second parish remains but has bad feelings about him. The impression was strong that Fr. John has acted in a very unbalanced and irresponsible way.
 
-I do not know the nature of Fr. Johns present troubles with Bishop Gregory; very possibly (knowing this bishop) there are some injustices there. I spoke with Bishop Laurus about the matter in Jordanville, and his impression is that Fr. John is moving around simply to escape supervision from any higher church authorities. I myself think that he is a restless, somewhat unbalanced person whose only hope for spiritual survival is to “stick it out” where he already is. I have written this to him myself, but have received no answer. I really don’t know what his state of soul has been in this past year, and why he is moving around so much.
+I do not know the nature of Fr. John's present troubles with Bishop Gregory; very possibly (knowing this bishop) there are some injustices there. I spoke with Bishop Laurus about the matter in Jordanville, and his impression is that Fr. John is moving around simply to escape supervision from any higher church authorities. I myself think that he is a restless, somewhat unbalanced person whose only hope for spiritual survival is to “stick it out” where he already is. I have written this to him myself, but have received no answer. I really don’t know what his state of soul has been in this past year, and why he is moving around so much.
 
 Of course, for your Church to receive him without a canonical release would place a very big obstacle in the way of peace between our jurisdictions. But even with a canonical release I think you will have trouble with him, and I think you should get to know him rather well before accepting him even canonically. Because of Vladika Andrews blessing, I still have hopes that he will survive spiritually—but only on condition that he stay put in one place and not go from jurisdiction to jurisdiction. Vladika Andrew told him that he would learn through sufferings and would not be considered a “real monk” by others because of his “non-monastic” work in taking care of old people. How your bishops would accept such an idea I don’t know; I think Fr. John could get along with our bishops if he really wants to (our bishops are really quite tolerant and lenient on the whole). From my talk with Bishop Laurus, I doubt very much that he will be able to get a canonical release to your jurisdiction. I think your bishops should emphasize to him the necessity for such a canonical release, and of getting to know him better if he does obtain it.
 
