--- a/src/content/docs/letter/111.mdx
+++ b/src/content/docs/letter/111.mdx
@@ -22,7 +22,7 @@ We received the plane tickets, and also noted the urgent tone of your brief lett
 
 However, it is really impossible for both of us to be away from here for more than 24 hours, and the more now when my 12-year-old godson [Tommy Anderson?] is staying with us. Father Herman insists that I go, and he makes it as urgent a matter as your letter sounds.
 
-Accordingly, we are sending you back the ticket made out to both of us. If you wish to trade it for a single ticket for me, then may Gods will be done, I will bow to the obedience, trusting in Vladika Johns prayers that I will travel safely (never having travelled in an airplane before).
+Accordingly, we are sending you back the ticket made out to both of us. If you wish to trade it for a single ticket for me, then may Gods will be done, I will bow to the obedience, trusting in Vladika John's prayers that I will travel safely (never having travelled in an airplane before).
 
 We “feel” that there is much that should be “said” between us, you and Father Panteleimon (and Father Ephraim), but not at all on the level of logic, projects, etc. How do you hold a “conference” based on what can’t really be “said”? Nonetheless, may God help us to do it—in the days ahead we sense spiritual shipwreck or prosperity for many, hanging precisely on this intangible thing. I think you also feel something of this.
 
