--- a/src/content/docs/letter/113.mdx
+++ b/src/content/docs/letter/113.mdx
@@ -22,15 +22,15 @@ Father Herman returned safely Wednesday from Edmonton with his mission accomplis
 
 Again, we thank you very much for this opportunity of seeing you and Frs. Panteleimon and Ephraim, and we are more than ever persuaded of the importance of such contacts. It would seem that in just about everything we are in the same “boat” with you—not only in the confession of True Orthodoxy, but even in our uncertain acceptance by some of the Church leadership.
 
-More than once you have mentioned your concern for getting the True Orthodox message to the Russians. After these last two weeks we are more convinced than ever that we should really begin something in this direction (no one else is going to); but also, we are more than ever convinced that our ruling bishop will not only disapprove, but will squash our attempt. However, Vladika Nektary suggested to Fr. Herman an idea which now won’t give us rest until we do something about it: that he, as Bishop of Seattle, revive Vladika Johns Blagovestnik (Good Tidings), of which Fr. Herman was once editor, as his own publication, but entrusting it entirely to us. (Vladika Anthony several years ago deliberately ceased publication of this, starting an insignificant publication of his own, and told us that we could not use the name—for reasons which now become more and more evident!) Previously Blagovestnik was devoted almost entirely to lives and services of saints, ascetics, and new martyrs, but now we would definitely add contemporary editorials, speaking explicitly about Constantinople, telling about Fr. Panteleimon and old calendarists, etc. (Some of our people in Canada whom Fr. Herman met have no idea who Fr. Panteleimon is.) We are of course short of hands and time, but 16 pages or so every 2 months I think we could handle.
+More than once you have mentioned your concern for getting the True Orthodox message to the Russians. After these last two weeks we are more convinced than ever that we should really begin something in this direction (no one else is going to); but also, we are more than ever convinced that our ruling bishop will not only disapprove, but will squash our attempt. However, Vladika Nektary suggested to Fr. Herman an idea which now won’t give us rest until we do something about it: that he, as Bishop of Seattle, revive Vladika John's Blagovestnik (Good Tidings), of which Fr. Herman was once editor, as his own publication, but entrusting it entirely to us. (Vladika Anthony several years ago deliberately ceased publication of this, starting an insignificant publication of his own, and told us that we could not use the name—for reasons which now become more and more evident!) Previously Blagovestnik was devoted almost entirely to lives and services of saints, ascetics, and new martyrs, but now we would definitely add contemporary editorials, speaking explicitly about Constantinople, telling about Fr. Panteleimon and old calendarists, etc. (Some of our people in Canada whom Fr. Herman met have no idea who Fr. Panteleimon is.) We are of course short of hands and time, but 16 pages or so every 2 months I think we could handle.
 
 Now: could you help us by taking charge of the address stencils, sending us the stickers for each mailing? We make bold to ask you this in the belief that with the typing being done outside it would not place too much of a burden on you (?), also because of your interest in presenting Russian materials, and also because anyone who wanted to come and search our skete would not find the names and addresses of subscribers (enough said!). It would also emphasize that this is the work of Vladika Nektary and the Seattle Diocese. Such a file, of course, would be kept quite distinct from True Vine or any other file, and need not be shown to anyone (even a bishop) without the blessing of Vladika Nektary.
 
-Please tell us your response to all this. As you see, we are trying to be “wise as serpents,” but even so it’s obvious that this will be interpreted in at least one circle as tantamount to an open declaration of war (which is, of course, not our intention, but if that is the result of speaking the free Orthodox word, then let it be so!). Vladika Nektary, however, is willing to take the brunt of the attack upon himself, and that makes us bold. We ourselves feel that the pressure will increase on us also now that it is seen that Vladika Savva’s trust and blessing rested upon us and not upon any of his fellow hierarchs (except, of course, Vladikas Averky and Nektary, and perhaps one or two other of the older bishops). We haven’t told you the whole story, but the treatment of Vladika Savva by his fellow hierarchs at the Sobor was simply a disgrace. When asked later why he had to endure such treatment, Vladika Savva only pointed his finger heavenward, and at the end he was very peaceful in soul. He wrote us that he received this because he helped Vladika John (probably as much in a spiritual as in a literal sense). Sadly, in one of his letters to us he wrote that he had given up the idea of printing Vladika John’s life in Russian (he wished to print something in Serbian) for fear that the Synod would ban it, although in his last letter he indicated he was going to print something in Russian anyway. But at the present time we, thanks be to God, have a freedom he didn’t have, and we won’t stop until were really squashed or it should become evident that we are not doing God’s will. Our boldness, it may be, is born of the utter hopelesness of our situation—having no “princes or sons of men” to trust in, we have to trust in God and in Vladika Johns prayers. We strongly suspect that Vladika John will be the “stumbling block” against which some who trust in politics and dead formalism will finally fall—and, hopefully, learn a “lesson.”
+Please tell us your response to all this. As you see, we are trying to be “wise as serpents,” but even so it’s obvious that this will be interpreted in at least one circle as tantamount to an open declaration of war (which is, of course, not our intention, but if that is the result of speaking the free Orthodox word, then let it be so!). Vladika Nektary, however, is willing to take the brunt of the attack upon himself, and that makes us bold. We ourselves feel that the pressure will increase on us also now that it is seen that Vladika Savva’s trust and blessing rested upon us and not upon any of his fellow hierarchs (except, of course, Vladikas Averky and Nektary, and perhaps one or two other of the older bishops). We haven’t told you the whole story, but the treatment of Vladika Savva by his fellow hierarchs at the Sobor was simply a disgrace. When asked later why he had to endure such treatment, Vladika Savva only pointed his finger heavenward, and at the end he was very peaceful in soul. He wrote us that he received this because he helped Vladika John (probably as much in a spiritual as in a literal sense). Sadly, in one of his letters to us he wrote that he had given up the idea of printing Vladika John’s life in Russian (he wished to print something in Serbian) for fear that the Synod would ban it, although in his last letter he indicated he was going to print something in Russian anyway. But at the present time we, thanks be to God, have a freedom he didn’t have, and we won’t stop until were really squashed or it should become evident that we are not doing God’s will. Our boldness, it may be, is born of the utter hopelesness of our situation—having no “princes or sons of men” to trust in, we have to trust in God and in Vladika John's prayers. We strongly suspect that Vladika John will be the “stumbling block” against which some who trust in politics and dead formalism will finally fall—and, hopefully, learn a “lesson.”
 
 The new issue of Nasha Strana from Buenos Aires has a necrolog of Vladika Savva by Archbishop Afanasy, which dares to mention that “he did not fear or hesitate to accuse unjustness or lying,” and even that “he was a great venerator of Archbishop John Maximovitch of San Francisco.” We’ve just learned that Vladika Afanasy himself, and also Vladika Savva of Australia, also supported Vladika John. Of course, we don’t want to divide everyone into sides or parties because of Vladika John! and also we have no bitter feelings against anyone—it’s just that he seems to be a touchstone of Orthodoxy in our days, and those who go against him seem to be off in their whole approach to the critical issues of today.
 
-Needless to say, all this is in strict confidence—between you and Fr. Panteleimon. I haven’t the strength or time to write Fr. Panteleimon a long letter, so perhaps you could just send him a copy of this. We’ve just been warned by the Post Office that we have until July 1 to get The Orthodox Word out on time, so for a while we will be concentrating on that. But, God willing, we would hope to start the Russian publication by the 7th anniversary of Vladika Johns repose—and the first issue, needless to say, must come as an absolute surprise, without any warning beforehand!
+Needless to say, all this is in strict confidence—between you and Fr. Panteleimon. I haven’t the strength or time to write Fr. Panteleimon a long letter, so perhaps you could just send him a copy of this. We’ve just been warned by the Post Office that we have until July 1 to get The Orthodox Word out on time, so for a while we will be concentrating on that. But, God willing, we would hope to start the Russian publication by the 7th anniversary of Vladika John's repose—and the first issue, needless to say, must come as an absolute surprise, without any warning beforehand!
 
 Pray for us and especially for Vlad. Nektary, and let us hear your response to all this.
 
