--- a/src/content/docs/letter/118.mdx
+++ b/src/content/docs/letter/118.mdx
@@ -18,9 +18,9 @@ Dear Father Neketas,
 
 Evlogeite! We are very glad to hear your positive reply to the proposed periodical. We are very grateful for your offer to print it for us. However, the printing itself would be the least of our labors, as we would plan to print 4 pages at a time (smaller than Orth. Word), 16-24 pages, and probably only 1000 copies to begin with—so the printing would entail only a fraction (10% or so) of the labor in printing OW.
 
-At any rate, we still have to talk the whole project over again with Vladika Nektary, who at times can be very timid about such things. It may be better to begin not quite so soon, only remembering that no matter what happens, Vladika Nektary did give us his blessing to revive Vladika Johns periodical.
+At any rate, we still have to talk the whole project over again with Vladika Nektary, who at times can be very timid about such things. It may be better to begin not quite so soon, only remembering that no matter what happens, Vladika Nektary did give us his blessing to revive Vladika John's periodical.
 
-Still, we would like very much to print something for the 7th anniversary of Vladika Johns repose. We would also like to do something for Vladika Savva’s memory. In reading over his papers and also his articles in Orthodox Russia, we see that he had a definite message for the Russian people, which will probably be forgotten now if we don’t do something about it. His articles on Vladika John speak more strongly than any of us on the fact that he is a saint who is not yet properly valued and who is of great significance for the Orthodox people. His testament to us is, clearly, to continue speaking this truth, even if the “organization” mentality doesn’t like to hear it.
+Still, we would like very much to print something for the 7th anniversary of Vladika John's repose. We would also like to do something for Vladika Savva’s memory. In reading over his papers and also his articles in Orthodox Russia, we see that he had a definite message for the Russian people, which will probably be forgotten now if we don’t do something about it. His articles on Vladika John speak more strongly than any of us on the fact that he is a saint who is not yet properly valued and who is of great significance for the Orthodox people. His testament to us is, clearly, to continue speaking this truth, even if the “organization” mentality doesn’t like to hear it.
 
 In reading the papers of Bishop Savva, we find addressed to him the usual complaints against Vladika John (these are the worst things they can find about him!): that he is irritable, crude, unthinking of others, (for example because he comes late to services), disrupts the usual order of things, is a poor administrator, can’t be understood, mumbles and falls asleep in the midst of the most important (worldly) discussions, that the clergy of the S.F. Cathedral consider it a holiday when he isn’t present. I myself had occasion to witness most of these phenomena, and I can testify, for example, that on the several occasions when he was “crude” with me I was extremely grateful and saw only spiritual benefit in it. In all of this I think there is hidden a significant fact about Vladika which hasn’t been brought out much: that he refused to allow the Church to become a habit, and by his seeming crudeness, he tried to jolt people out of the spiritual rut into which it can be so easy to fall. As soon as Vladika was gone, everything became “smooth” in the Cathedral and the clergy were content—because now they could and did make the Church a habit, incapable of inspiring anyone except on the capital of the past which has not yet been used up (but will be before long!).
 
