--- a/src/content/docs/letter/119.mdx
+++ b/src/content/docs/letter/119.mdx
@@ -20,9 +20,9 @@ Greetings in our Lord Jesus Christ. This will be mainly replies to your question
 
 We have no immediate plans to reprint the “charismatic” article, so Fr. Neketas is certainly welcome to do so. If no one does reprint it, later we might collect that series of articles on non-Chris- tian religions and have it reprinted by offset, but now we’re too overwhelmed with other things. We get the Logos and have noted with decreasing interest its progress from worse to worser.
 
-Yes, the repose of Vladika Savva was a loss for all of us, and as usual, it is only now that we begin really to value him. We have an article on him in the new (Dec) OW and will be printing regularly some of his material on Vladika John. Unfortunately, there is not too much beyond what he already published in Orthodox Russia, but some of it is very valuable (for example, a letter from Vladika Johns younger brother describing his childhood). We haven’t started going through Vlad. Savva’s norebooks yet, but they seem at first glance to be full of nothing but Holy Fathers (handwritten!). Certainly you are welcome to have the icon of the Forerunner as a remembrance of him.
+Yes, the repose of Vladika Savva was a loss for all of us, and as usual, it is only now that we begin really to value him. We have an article on him in the new (Dec) OW and will be printing regularly some of his material on Vladika John. Unfortunately, there is not too much beyond what he already published in Orthodox Russia, but some of it is very valuable (for example, a letter from Vladika John's younger brother describing his childhood). We haven’t started going through Vlad. Savva’s norebooks yet, but they seem at first glance to be full of nothing but Holy Fathers (handwritten!). Certainly you are welcome to have the icon of the Forerunner as a remembrance of him.
 
-Concerning the Panagia and Cross of Vladika John, I wrote a hasty scribbled note to Fr. Panteleimon when Fr. Herman returned from Edmonton, but probably it was too unclear or cryptic. In a word: after hearing about them from Fr. Panteleimon in Seattle, Fr. Herman asked about them in Edmonton: the Panagia, with inscription on the back from Archbishop Gabriel, he got and we have here. However, no one knew about a Cross with particles of the True Cross; there was only a Cross with many relics inside, of which we have a list. This we also have. Is it the same one, or is it absolutely certain that it has particles of the True Cross and not relics? By the way, don’t spread it (beyond Fr. Panteleimon) that we have these, as we have them “unofficially” and would never have asked for them if Fr. Panteleimon hadn’t spoken. Vladika Nektary knows, but his ruling Vlad, doesn’t, and we have yet to hear his response to all this. Unfortunately, he is not well disposed to the glorification of Vladika Johns memory, and besides he seems to stand in mortal fear of Vlad. Vit. We belong to the “other” tradition: do as your conscience says and speak out, and if they persecute you or “retire” you for it, well and good. (Did you ever hear of a “retired” monk? Maybe you will!)
+Concerning the Panagia and Cross of Vladika John, I wrote a hasty scribbled note to Fr. Panteleimon when Fr. Herman returned from Edmonton, but probably it was too unclear or cryptic. In a word: after hearing about them from Fr. Panteleimon in Seattle, Fr. Herman asked about them in Edmonton: the Panagia, with inscription on the back from Archbishop Gabriel, he got and we have here. However, no one knew about a Cross with particles of the True Cross; there was only a Cross with many relics inside, of which we have a list. This we also have. Is it the same one, or is it absolutely certain that it has particles of the True Cross and not relics? By the way, don’t spread it (beyond Fr. Panteleimon) that we have these, as we have them “unofficially” and would never have asked for them if Fr. Panteleimon hadn’t spoken. Vladika Nektary knows, but his ruling Vlad, doesn’t, and we have yet to hear his response to all this. Unfortunately, he is not well disposed to the glorification of Vladika John's memory, and besides he seems to stand in mortal fear of Vlad. Vit. We belong to the “other” tradition: do as your conscience says and speak out, and if they persecute you or “retire” you for it, well and good. (Did you ever hear of a “retired” monk? Maybe you will!)
 
 We have no copies left of the original St. Herman Life. One day we’ll print a better one!
 
