--- a/src/content/docs/letter/169.mdx
+++ b/src/content/docs/letter/169.mdx
@@ -18,7 +18,7 @@ Dear Sister in Christ, Barbara [Murray],
 
 Greetings in our Lord Jesus Christ. I believe we never thanked you for your Christmas gift. We opened it on Christmas day in the “Tsars Room” and immediately put it on the analogion in the corner; it is most beautiful.
 
-Johns visit to us enabled us to get to know him fairly well, which we hadn’t done before. The boy is much brighter than we suspected, and is obviously far ahead of his class in most subjects. He reads quite a bit, and in general knowledge is quite aware. At times with us, especially when talking with me at night, he “relaxed” and became quite a normal boy, interested in many things, anxious to please, happy to talk seriously about the things that interest him (which are many). But at other times, especially with everyone present, he would revert to his “old self”: stubborn, disobedient or grudgingly obedient, putting on his act of “I’ll do as I please.” Obviously his whole home situation has deeply wounded him, and he is prepared to get his “revenge” on life by not cooperating with people. If he could “straighten out,” he could be very good; if he doesn’t, he will doubtless be very bad and will harm people in life.
+John's visit to us enabled us to get to know him fairly well, which we hadn’t done before. The boy is much brighter than we suspected, and is obviously far ahead of his class in most subjects. He reads quite a bit, and in general knowledge is quite aware. At times with us, especially when talking with me at night, he “relaxed” and became quite a normal boy, interested in many things, anxious to please, happy to talk seriously about the things that interest him (which are many). But at other times, especially with everyone present, he would revert to his “old self”: stubborn, disobedient or grudgingly obedient, putting on his act of “I’ll do as I please.” Obviously his whole home situation has deeply wounded him, and he is prepared to get his “revenge” on life by not cooperating with people. If he could “straighten out,” he could be very good; if he doesn’t, he will doubtless be very bad and will harm people in life.
 
 Probably his being with you is the best thing for him right now. It is good that you are strict with him as much as you can be; I could tell that he had a proper fear and respect when you take away his “bicycle rights,” and in general he seems to realize that you are fair with him. He seemed to enjoy it with us very much (he even got to chop down his first Christmas tree!) and already talked about his next visit; we told him that would depend on his behavior in Etna, and he promised to make some effort at improvement. I suspect this improvement, if it really comes, will be only gradual, or even in fits and starts; but if he does make some effort there is hope for him. If he has our Skete in mind as a kind of “reward” for his behavior, this idea may help him too. You are doing a very important thing in giving him a home at this important time of his life; may God reward you for your efforts and patience, and give you the wisdom to handle him.
 
